美食給出3個選擇

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2026 南橫熱血之旅 - 數位路書</title>
+    <title>2026 南橫熱血路書 - 特力屋出發版</title>
     <style>
         :root {
             --primary-color: #27ae60;
@@ -15,171 +15,156 @@
         }
         body { 
             font-family: "PingFang TC", "Microsoft JhengHei", sans-serif; 
-            line-height: 1.6; 
-            color: #333; 
-            background-color: var(--bg-color);
-            max-width: 900px; 
-            margin: 0 auto; 
-            padding: 20px;
+            line-height: 1.6; color: #333; background-color: var(--bg-color);
+            max-width: 900px; margin: 0 auto; padding: 20px;
         }
         header {
-            text-align: center;
-            padding: 25px;
-            background: linear-gradient(135deg, var(--primary-color), #1e8449);
-            color: white;
-            border-radius: 15px;
-            margin-bottom: 20px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            text-align: center; padding: 25px;
+            background: linear-gradient(135deg, #f39c12, #d35400);
+            color: white; border-radius: 15px; margin-bottom: 20px;
         }
         .section {
-            background: var(--card-bg);
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
-            margin-bottom: 25px;
+            background: var(--card-bg); padding: 20px; border-radius: 12px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.05); margin-bottom: 25px;
         }
-        h2 { 
-            color: var(--primary-color); 
-            border-left: 5px solid var(--primary-color);
-            padding-left: 12px;
-            margin-top: 0;
-            font-size: 1.4em;
-        }
+        h2 { color: var(--primary-color); border-left: 5px solid var(--primary-color); padding-left: 12px; margin-top: 0; }
         .warning-box {
-            background-color: #fff3f3;
-            border: 2px solid var(--danger-color);
-            border-radius: 10px;
-            padding: 15px;
-            margin-bottom: 20px;
-            color: var(--danger-color);
-            text-align: center;
+            background-color: #fff3f3; border: 2px solid var(--danger-color);
+            border-radius: 10px; padding: 15px; margin-bottom: 20px; color: var(--danger-color); text-align: center;
         }
-        /* 快速連結按鈕 */
-        .btn-group {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 10px;
-            margin-bottom: 10px;
-        }
+        .btn-group { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-bottom: 10px; }
         .btn {
-            display: block;
-            text-align: center;
-            padding: 12px;
-            background: var(--info-color);
-            color: white;
-            text-decoration: none;
-            border-radius: 8px;
-            font-weight: bold;
-            font-size: 0.9em;
-            transition: 0.3s;
+            display: block; text-align: center; padding: 12px; background: var(--info-color);
+            color: white; text-decoration: none; border-radius: 8px; font-weight: bold;
         }
-        .btn:hover { background: #1a5276; }
-
-        /* 行程表 */
         table { width: 100%; border-collapse: collapse; }
-        .time { font-weight: bold; color: var(--secondary-color); width: 75px; vertical-align: top; padding: 12px 0; }
-        .content { padding: 12px 0 12px 10px; border-bottom: 1px solid #eee; }
-        .map-link { 
-            display: inline-block;
-            margin-top: 5px;
-            color: var(--info-color);
-            text-decoration: none;
-            font-size: 0.9em;
-            font-weight: bold;
-        }
-        /* 清單 */
-        .check-item { display: flex; align-items: center; margin-bottom: 10px; font-size: 1.05em; }
-        input[type="checkbox"] { margin-right: 12px; width: 20px; height: 20px; cursor: pointer; }
-        
-        .trip-image { width: 100%; border-radius: 12px; margin-top: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); }
-        footer { text-align: center; color: #888; font-size: 0.85em; margin-top: 40px; padding-bottom: 20px; }
+        .time { font-weight: bold; color: var(--secondary-color); width: 75px; vertical-align: top; padding: 15px 0; }
+        .content { padding: 15px 0 15px 10px; border-bottom: 1px solid #eee; }
+        .food-options { background: #f9f9f9; padding: 10px; border-radius: 8px; margin-top: 8px; font-size: 0.9em; }
+        .food-tag { color: #d35400; font-weight: bold; margin-right: 5px; }
+        .map-link { color: var(--info-color); text-decoration: none; font-weight: bold; font-size: 0.9em; }
+        .check-item { display: flex; align-items: center; margin-bottom: 10px; }
+        input[type="checkbox"] { margin-right: 12px; width: 20px; height: 20px; }
+        .trip-image { width: 100%; border-radius: 12px; margin-top: 10px; }
+        footer { text-align: center; color: #888; font-size: 0.85em; margin-top: 40px; }
     </style>
 </head>
 <body>
 
 <header>
     <h1>2026 南橫熱血之旅</h1>
-    <p>車款：SYM Woo 115 (蘋果綠) | 日期：2026/01/31 (初三)</p>
+    <p>起點：特力屋高雄左營店 | 車款：Woo 115</p>
 </header>
 
 <div class="warning-box">
     <strong>⛽ 絕對指令：梅蘭加油站是入山前最後補給點！</strong><br>
-    Woo 115 油箱較小，請務必在此加滿，避免在高海拔山區顧路。
+    初三車多，Woo 115 務必在此加滿，確保油量足以應付高海拔爬坡。
 </div>
 
 <div class="section">
     <h2>即時資訊查詢</h2>
     <div class="btn-group">
-        <a href="https://168.thb.gov.tw/" target="_blank" class="btn">🛣️ 公路總局即時路況</a>
-        <a href="https://www.cwa.gov.tw/V8/C/W/County/County.html?CID=64023" target="_blank" class="btn">🌤️ 高雄山區天氣預報</a>
-    </div>
-    <div class="btn-group">
-        <a href="https://khh.travel/zh-tw/event/news" target="_blank" class="btn">📢 高雄觀光局最新消息</a>
-        <a href="https://mobile.cwa.gov.tw/V8/M/W/OBS_Radar.htm" target="_blank" class="btn">📡 即時雷達回波圖</a>
+        <a href="https://168.thb.gov.tw/" target="_blank" class="btn">🛣️ 即時路況查詢</a>
+        <a href="https://www.cwa.gov.tw/V8/C/W/County/County.html?CID=64023" target="_blank" class="btn">🌤️ 高雄山區天氣</a>
     </div>
 </div>
 
 <div class="section">
-    <h2>行程計畫軸</h2>
+    <h2>行程計畫與美食推薦</h2>
     <table>
         <tr>
             <td class="time">06:00</td>
             <td class="content">
-                <strong>高雄榮總出發</strong><br>
-                清晨體感溫度低，請穿著防風外套。<br>
-                <a href="https://www.google.com/maps/search/?api=1&query=高雄榮民總醫院" target="_blank" class="map-link">📍 地圖導航</a>
+                <strong>特力屋左營店 出發</strong><br>
+                <a href="https://www.google.com/maps/search/?api=1&query=特力屋+高雄左營店" target="_blank" class="map-link">📍 起點導航</a>
             </td>
         </tr>
         <tr>
-            <td class="time">07:10</td>
-            <td class="content"><strong>甲仙區</strong> (吃早點、短暫休整)</td>
+            <td class="time">07:20</td>
+            <td class="content">
+                <strong>甲仙區 (早餐推薦)</strong><br>
+                <a href="https://www.google.com/maps/search/?api=1&query=甲仙+早餐" target="_blank" class="map-link">📍 甲仙導航</a>
+                <div class="food-options">
+                    <span class="food-tag">三選一：</span><br>
+                    1. <strong>徐財記芋粿</strong>：外酥內軟的古法芋粿。<br>
+                    2. <strong>甲仙碗粿</strong>：在地傳統台式早餐。<br>
+                    3. <strong>芋冰/芋圓</strong>：提神首選。
+                </div>
+            </td>
         </tr>
         <tr>
             <td class="time">08:45</td>
             <td class="content">
-                <strong style="color:var(--danger-color);">梅蘭加油站 [必停點]</strong><br>
-                <strong>最後補給！</strong> 錯過將無法完成行程。<br>
-                <a href="https://www.google.com/maps/search/?api=1&query=中油梅蘭站" target="_blank" class="map-link">📍 地圖導航</a>
+                <strong style="color:var(--danger-color);">梅蘭加油站 (必停)</strong><br>
+                <a href="https://www.google.com/maps/search/?api=1&query=中油梅蘭站" target="_blank" class="map-link">📍 加油站導航</a>
             </td>
         </tr>
         <tr>
             <td class="time">09:15</td>
-            <td class="content"><strong>梅山口管制站</strong> (準時入山)</td>
+            <td class="content">
+                <strong>梅山口管制站</strong><br>
+                <a href="https://www.google.com/maps/search/?api=1&query=梅山口遊客中心" target="_blank" class="map-link">📍 管制站導航</a>
+            </td>
         </tr>
         <tr>
             <td class="time">11:30</td>
             <td class="content">
-                <strong>埡口 (雲海觀賞)</strong><br>
-                拍照熱點，注意高海拔稀薄氧氣。<br>
-                <a href="https://www.google.com/maps/search/?api=1&query=南橫埡口" target="_blank" class="map-link">📍 地圖導航</a>
+                <strong>埡口 (大關山隧道)</strong><br>
+                <a href="https://www.google.com/maps/search/?api=1&query=南橫埡口" target="_blank" class="map-link">📍 埡口導航</a>
             </td>
         </tr>
         <tr>
             <td class="time">13:30</td>
-            <td class="content"><strong>梅山部落 (午餐)</strong></td>
+            <td class="content">
+                <strong>梅山部落 (午餐推薦)</strong><br>
+                <a href="https://www.google.com/maps/search/?api=1&query=梅山部落+餐廳" target="_blank" class="map-link">📍 梅山餐飲區</a>
+                <div class="food-options">
+                    <span class="food-tag">三選一：</span><br>
+                    1. <strong>布農烤肉/石板肉</strong>：炭火香氣十足。<br>
+                    2. <strong>馬告雞湯麵</strong>：熱騰騰的暖身首選。<br>
+                    3. <strong>愛玉甜點</strong>：當地自產天然愛玉。
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td class="time">15:30</td>
+            <td class="content">
+                <strong>旗山老街 (下午茶)</strong><br>
+                <a href="https://www.google.com/maps/search/?api=1&query=旗山老街" target="_blank" class="map-link">📍 旗山導航</a>
+                <div class="food-options">
+                    <span class="food-tag">三選一：</span><br>
+                    1. <strong>香蕉蛋糕/香蕉冰</strong>：旗山經典特產。<br>
+                    2. <strong>旗山紅糟肉</strong>：在地特色排隊小吃。<br>
+                    3. <strong>常美冰店</strong>：傳統枝仔冰與香蕉冰。
+                </div>
+            </td>
         </tr>
         <tr>
             <td class="time">17:00</td>
-            <td class="content"><strong>高雄榮總</strong> (平安抵達)</td>
+            <td class="content">
+                <strong>特力屋左營店 平安抵達</strong><br>
+                <a href="https://www.google.com/maps/search/?api=1&query=特力屋+高雄左營店" target="_blank" class="map-link">📍 終點導航</a>
+            </td>
         </tr>
     </table>
 </div>
 
 <div class="section">
-    <h2>物品準備清單</h2>
-    <div class="check-item"><input type="checkbox"> 簡易補胎組 (鑽孔錐、膠條、膠水)</div>
-    <div class="check-item"><input type="checkbox"> 行動電動打氣機 (檢查電力)</div>
-    <div class="check-item"><input type="checkbox"> 防風防水外套 + 輕便羽絨衣</div>
-    <div class="check-item"><input type="checkbox"> 長版防風手套 + 脖圍</div>
-    <div class="check-item"><input type="checkbox"> 行動電源 + 下載離線地圖</div>
-    <div class="check-item"><input type="checkbox"> 緊急高熱量巧克力</div>
-    <div class="check-item"><input type="checkbox"> 檢查 Woo 115 煞車靈敏度</div>
+    <h2>📋 出發準備清單</h2>
+    <div class="check-item"><input type="checkbox"> 簡易補胎組 & 電動打氣機</div>
+    <div class="check-item"><input type="checkbox"> 防風防水外套 & 兩件式雨衣</div>
+    <div class="check-item"><input type="checkbox"> 行動電源 & 離線地圖下載</div>
+    <div class="check-item"><input type="checkbox"> <strong>確認油箱已在梅蘭站加滿</strong></div>
 </div>
 
 <div class="section">
-    <h2>旅遊計畫視覺概覽</h2>
+    <h2>🖼️ 旅遊計畫視覺圖</h2>
     <img src="https://github.com/user-attachments/assets/a6503acc-6710-47db-b3d0-bf0c20b18883" alt="2026南橫計畫圖" class="trip-image">
 </div>
 
 <footer>
-    <p>© 2026 南橫 100cc 熱血一日遊計畫 | 祝
+    <p>© 2026 南橫熱血一日遊 | 祝您旅途平安順利！</p>
+</footer>
+
+</body>
+</html>
