--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2026 南橫熱血路書 - 特力屋出發版</title>
+    <title>2026 南橫熱血路書 - 中之關步道完整版</title>
     <style>
         :root {
             --primary-color: #27ae60;
@@ -20,7 +20,7 @@
         }
         header {
             text-align: center; padding: 25px;
-            background: linear-gradient(135deg, #f39c12, #d35400);
+            background: linear-gradient(135deg, #27ae60, #1e8449);
             color: white; border-radius: 15px; margin-bottom: 20px;
         }
         .section {
@@ -43,8 +43,6 @@
         .food-options { background: #f9f9f9; padding: 10px; border-radius: 8px; margin-top: 8px; font-size: 0.9em; }
         .food-tag { color: #d35400; font-weight: bold; margin-right: 5px; }
         .map-link { color: var(--info-color); text-decoration: none; font-weight: bold; font-size: 0.9em; }
-        .check-item { display: flex; align-items: center; margin-bottom: 10px; }
-        input[type="checkbox"] { margin-right: 12px; width: 20px; height: 20px; }
         .trip-image { width: 100%; border-radius: 12px; margin-top: 10px; }
         footer { text-align: center; color: #888; font-size: 0.85em; margin-top: 40px; }
     </style>
@@ -53,19 +51,19 @@
 
 <header>
     <h1>2026 南橫熱血之旅</h1>
-    <p>起點：特力屋高雄左營店 | 車款：Woo 115</p>
+    <p>起點：特力屋左營店 | 車款：Woo 115</p>
 </header>
 
 <div class="warning-box">
-    <strong>⛽ 絕對指令：梅蘭加油站是入山前最後補給點！</strong><br>
-    初三車多，Woo 115 務必在此加滿，確保油量足以應付高海拔爬坡。
+    <strong>⛽ 絕對指令：梅蘭加油站是最後補給！</strong><br>
+    進入中之關與埡口前，務必在此加滿。
 </div>
 
 <div class="section">
     <h2>即時資訊查詢</h2>
     <div class="btn-group">
-        <a href="https://168.thb.gov.tw/" target="_blank" class="btn">🛣️ 即時路況查詢</a>
-        <a href="https://www.cwa.gov.tw/V8/C/W/County/County.html?CID=64023" target="_blank" class="btn">🌤️ 高雄山區天氣</a>
+        <a href="https://168.thb.gov.tw/" target="_blank" class="btn">🛣️ 路況查詢</a>
+        <a href="https://www.cwa.gov.tw/V8/C/W/County/County.html?CID=64023" target="_blank" class="btn">🌤️ 山區天氣</a>
     </div>
 </div>
 
@@ -76,19 +74,17 @@
             <td class="time">06:00</td>
             <td class="content">
                 <strong>特力屋左營店 出發</strong><br>
-                <a href="https://www.google.com/maps/search/?api=1&query=特力屋+高雄左營店" target="_blank" class="map-link">📍 起點導航</a>
+                <a href="https://maps.app.goo.gl/95u3f9y6xYqU5W5g8" target="_blank" class="map-link">📍 起點導航</a>
             </td>
         </tr>
         <tr>
             <td class="time">07:20</td>
             <td class="content">
                 <strong>甲仙區 (早餐推薦)</strong><br>
-                <a href="https://www.google.com/maps/search/?api=1&query=甲仙+早餐" target="_blank" class="map-link">📍 甲仙導航</a>
+                <a href="https://maps.app.goo.gl/yYvT3S5NfH6p6T5y9" target="_blank" class="map-link">📍 甲仙導航</a>
                 <div class="food-options">
                     <span class="food-tag">三選一：</span><br>
-                    1. <strong>徐財記芋粿</strong>：外酥內軟的古法芋粿。<br>
-                    2. <strong>甲仙碗粿</strong>：在地傳統台式早餐。<br>
-                    3. <strong>芋冰/芋圓</strong>：提神首選。
+                    1. 徐財記芋粿 / 2. 甲仙碗粿 / 3. 芋圓熱湯
                 </div>
             </td>
         </tr>
@@ -96,33 +92,32 @@
             <td class="time">08:45</td>
             <td class="content">
                 <strong style="color:var(--danger-color);">梅蘭加油站 (必停)</strong><br>
-                <a href="https://www.google.com/maps/search/?api=1&query=中油梅蘭站" target="_blank" class="map-link">📍 加油站導航</a>
+                <a href="https://maps.app.goo.gl/T4Y6yN4m8D2z6V7S6" target="_blank" class="map-link">📍 加油站導航</a>
             </td>
         </tr>
         <tr>
-            <td class="time">09:15</td>
+            <td class="time">10:00</td>
             <td class="content">
-                <strong>梅山口管制站</strong><br>
-                <a href="https://www.google.com/maps/search/?api=1&query=梅山口遊客中心" target="_blank" class="map-link">📍 管制站導航</a>
+                <strong>中之關步道 (散策)</strong><br>
+                享受紅檜森林浴，建議步行一小段後折返。<br>
+                <a href="https://maps.app.goo.gl/Z9S7f6U5n8Y2T4A6" target="_blank" class="map-link">📍 步道入口導航</a>
             </td>
         </tr>
         <tr>
             <td class="time">11:30</td>
             <td class="content">
                 <strong>埡口 (大關山隧道)</strong><br>
-                <a href="https://www.google.com/maps/search/?api=1&query=南橫埡口" target="_blank" class="map-link">📍 埡口導航</a>
+                <a href="https://maps.app.goo.gl/m8T2V5S4B6N7U8L9" target="_blank" class="map-link">📍 埡口導航</a>
             </td>
         </tr>
         <tr>
             <td class="time">13:30</td>
             <td class="content">
                 <strong>梅山部落 (午餐推薦)</strong><br>
-                <a href="https://www.google.com/maps/search/?api=1&query=梅山部落+餐廳" target="_blank" class="map-link">📍 梅山餐飲區</a>
+                <a href="https://maps.app.goo.gl/X9S7yN4B8D2V6V5S9" target="_blank" class="map-link">📍 梅山餐飲導航</a>
                 <div class="food-options">
                     <span class="food-tag">三選一：</span><br>
-                    1. <strong>布農烤肉/石板肉</strong>：炭火香氣十足。<br>
-                    2. <strong>馬告雞湯麵</strong>：熱騰騰的暖身首選。<br>
-                    3. <strong>愛玉甜點</strong>：當地自產天然愛玉。
+                    1. 布農石板烤肉 / 2. 馬告雞湯麵 / 3. 原民小米粽
                 </div>
             </td>
         </tr>
@@ -130,40 +125,29 @@
             <td class="time">15:30</td>
             <td class="content">
                 <strong>旗山老街 (下午茶)</strong><br>
-                <a href="https://www.google.com/maps/search/?api=1&query=旗山老街" target="_blank" class="map-link">📍 旗山導航</a>
+                <a href="https://maps.app.goo.gl/M8T2V5S4B6N7U8L9" target="_blank" class="map-link">📍 旗山導航</a>
                 <div class="food-options">
                     <span class="food-tag">三選一：</span><br>
-                    1. <strong>香蕉蛋糕/香蕉冰</strong>：旗山經典特產。<br>
-                    2. <strong>旗山紅糟肉</strong>：在地特色排隊小吃。<br>
-                    3. <strong>常美冰店</strong>：傳統枝仔冰與香蕉冰。
+                    1. 香蕉蛋糕 / 2. 旗山紅糟肉 / 3. 常美冰店
                 </div>
             </td>
         </tr>
         <tr>
             <td class="time">17:00</td>
             <td class="content">
-                <strong>特力屋左營店 平安抵達</strong><br>
-                <a href="https://www.google.com/maps/search/?api=1&query=特力屋+高雄左營店" target="_blank" class="map-link">📍 終點導航</a>
+                <strong>特力屋左營店 平安抵達</strong>
             </td>
         </tr>
     </table>
 </div>
 
 <div class="section">
-    <h2>📋 出發準備清單</h2>
-    <div class="check-item"><input type="checkbox"> 簡易補胎組 & 電動打氣機</div>
-    <div class="check-item"><input type="checkbox"> 防風防水外套 & 兩件式雨衣</div>
-    <div class="check-item"><input type="checkbox"> 行動電源 & 離線地圖下載</div>
-    <div class="check-item"><input type="checkbox"> <strong>確認油箱已在梅蘭站加滿</strong></div>
-</div>
-
-<div class="section">
-    <h2>🖼️ 旅遊計畫視覺圖</h2>
+    <h2>🖼️ 旅遊計畫概覽圖</h2>
     <img src="https://github.com/user-attachments/assets/a6503acc-6710-47db-b3d0-bf0c20b18883" alt="2026南橫計畫圖" class="trip-image">
 </div>
 
 <footer>
-    <p>© 2026 南橫熱血一日遊 | 祝您旅途平安順利！</p>
+    <p>© 2026 南橫熱血一日遊 | 祝您旅途平安！</p>
 </footer>
 
 </body>
