--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2026 南橫熱血路書 - 中之關步道完整版</title>
+    <title>2026 南橫熱血路書 - 06:30 出發版</title>
     <style>
         :root {
             --primary-color: #27ae60;
@@ -32,18 +32,18 @@
             background-color: #fff3f3; border: 2px solid var(--danger-color);
             border-radius: 10px; padding: 15px; margin-bottom: 20px; color: var(--danger-color); text-align: center;
         }
-        .btn-group { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-bottom: 10px; }
+        .btn-group { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-bottom: 15px; }
         .btn {
             display: block; text-align: center; padding: 12px; background: var(--info-color);
-            color: white; text-decoration: none; border-radius: 8px; font-weight: bold;
+            color: white; text-decoration: none; border-radius: 8px; font-weight: bold; font-size: 0.9em;
         }
         table { width: 100%; border-collapse: collapse; }
         .time { font-weight: bold; color: var(--secondary-color); width: 75px; vertical-align: top; padding: 15px 0; }
         .content { padding: 15px 0 15px 10px; border-bottom: 1px solid #eee; }
-        .food-options { background: #f9f9f9; padding: 10px; border-radius: 8px; margin-top: 8px; font-size: 0.9em; }
+        .food-options { background: #f9f9f9; padding: 10px; border-radius: 8px; margin-top: 8px; font-size: 0.9em; line-height: 1.5; }
         .food-tag { color: #d35400; font-weight: bold; margin-right: 5px; }
         .map-link { color: var(--info-color); text-decoration: none; font-weight: bold; font-size: 0.9em; }
-        .trip-image { width: 100%; border-radius: 12px; margin-top: 10px; }
+        .trip-image { width: 100%; border-radius: 12px; margin-top: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
         footer { text-align: center; color: #888; font-size: 0.85em; margin-top: 40px; }
     </style>
 </head>
@@ -51,19 +51,19 @@
 
 <header>
     <h1>2026 南橫熱血之旅</h1>
-    <p>起點：特力屋左營店 | 車款：Woo 115</p>
+    <p>起點：特力屋左營店 | 時間：06:30 - 18:00</p>
 </header>
 
 <div class="warning-box">
-    <strong>⛽ 絕對指令：梅蘭加油站是最後補給！</strong><br>
-    進入中之關與埡口前，務必在此加滿。
+    <strong>⛽ 絕對指令：梅蘭加油站是最後補給點！</strong><br>
+    初三車潮多，請務必在此加滿油箱，確保 Woo 115 爬坡油耗無虞。
 </div>
 
 <div class="section">
     <h2>即時資訊查詢</h2>
     <div class="btn-group">
-        <a href="https://168.thb.gov.tw/" target="_blank" class="btn">🛣️ 路況查詢</a>
-        <a href="https://www.cwa.gov.tw/V8/C/W/County/County.html?CID=64023" target="_blank" class="btn">🌤️ 山區天氣</a>
+        <a href="https://168.thb.gov.tw/" target="_blank" class="btn">🛣️ 即時路況查詢</a>
+        <a href="https://www.cwa.gov.tw/V8/C/W/County/County.html?CID=64023" target="_blank" class="btn">🌤️ 山區天氣預報</a>
     </div>
 </div>
 
@@ -71,17 +71,17 @@
     <h2>行程計畫與美食推薦</h2>
     <table>
         <tr>
-            <td class="time">06:00</td>
+            <td class="time">06:30</td>
             <td class="content">
                 <strong>特力屋左營店 出發</strong><br>
-                <a href="https://maps.app.goo.gl/95u3f9y6xYqU5W5g8" target="_blank" class="map-link">📍 起點導航</a>
+                <a href="https://www.google.com/maps/search/特力屋+高雄左營店" target="_blank" class="map-link">📍 起點導航</a>
             </td>
         </tr>
         <tr>
-            <td class="time">07:20</td>
+            <td class="time">07:50</td>
             <td class="content">
                 <strong>甲仙區 (早餐推薦)</strong><br>
-                <a href="https://maps.app.goo.gl/yYvT3S5NfH6p6T5y9" target="_blank" class="map-link">📍 甲仙導航</a>
+                <a href="https://www.google.com/maps/search/甲仙+美食" target="_blank" class="map-link">📍 甲仙導航</a>
                 <div class="food-options">
                     <span class="food-tag">三選一：</span><br>
                     1. 徐財記芋粿 / 2. 甲仙碗粿 / 3. 芋圓熱湯
@@ -89,32 +89,34 @@
             </td>
         </tr>
         <tr>
-            <td class="time">08:45</td>
+            <td class="time">09:15</td>
             <td class="content">
-                <strong style="color:var(--danger-color);">梅蘭加油站 (必停)</strong><br>
-                <a href="https://maps.app.goo.gl/T4Y6yN4m8D2z6V7S6" target="_blank" class="map-link">📍 加油站導航</a>
+                <strong style="color:var(--danger-color);">梅蘭加油站 (最後補給)</strong><br>
+                <strong>務必加滿！</strong> 錯過將無法完成埡口行程。<br>
+                <a href="https://www.google.com/maps/search/中油梅蘭站" target="_blank" class="map-link">📍 加油站導航</a>
             </td>
         </tr>
         <tr>
-            <td class="time">10:00</td>
+            <td class="time">10:30</td>
             <td class="content">
-                <strong>中之關步道 (散策)</strong><br>
-                享受紅檜森林浴，建議步行一小段後折返。<br>
-                <a href="https://maps.app.goo.gl/Z9S7f6U5n8Y2T4A6" target="_blank" class="map-link">📍 步道入口導航</a>
+                <strong>中之關步道 (森林浴)</strong><br>
+                步行享受芬多精，建議在此停留約 45 分鐘。<br>
+                <a href="https://www.google.com/maps/search/中之關步道" target="_blank" class="map-link">📍 步道入口導航</a>
             </td>
         </tr>
         <tr>
-            <td class="time">11:30</td>
+            <td class="time">12:00</td>
             <td class="content">
-                <strong>埡口 (大關山隧道)</strong><br>
-                <a href="https://maps.app.goo.gl/m8T2V5S4B6N7U8L9" target="_blank" class="map-link">📍 埡口導航</a>
+                <strong>埡口 (雲海大景)</strong><br>
+                海拔 2722m，拍照停留後準備下山。<br>
+                <a href="https://www.google.com/maps/search/南橫埡口" target="_blank" class="map-link">📍 埡口導航</a>
             </td>
         </tr>
         <tr>
             <td class="time">13:30</td>
             <td class="content">
                 <strong>梅山部落 (午餐推薦)</strong><br>
-                <a href="https://maps.app.goo.gl/X9S7yN4B8D2V6V5S9" target="_blank" class="map-link">📍 梅山餐飲導航</a>
+                <a href="https://www.google.com/maps/search/梅山部落+餐飲" target="_blank" class="map-link">📍 梅山導航</a>
                 <div class="food-options">
                     <span class="food-tag">三選一：</span><br>
                     1. 布農石板烤肉 / 2. 馬告雞湯麵 / 3. 原民小米粽
@@ -122,10 +124,10 @@
             </td>
         </tr>
         <tr>
-            <td class="time">15:30</td>
+            <td class="time">16:00</td>
             <td class="content">
-                <strong>旗山老街 (下午茶)</strong><br>
-                <a href="https://maps.app.goo.gl/M8T2V5S4B6N7U8L9" target="_blank" class="map-link">📍 旗山導航</a>
+                <strong>旗山老街 (伴手禮)</strong><br>
+                <a href="https://www.google.com/maps/search/旗山老街" target="_blank" class="map-link">📍 旗山導航</a>
                 <div class="food-options">
                     <span class="food-tag">三選一：</span><br>
                     1. 香蕉蛋糕 / 2. 旗山紅糟肉 / 3. 常美冰店
@@ -133,7 +135,7 @@
             </td>
         </tr>
         <tr>
-            <td class="time">17:00</td>
+            <td class="time">18:00</td>
             <td class="content">
                 <strong>特力屋左營店 平安抵達</strong>
             </td>
@@ -142,12 +144,22 @@
 </div>
 
 <div class="section">
-    <h2>🖼️ 旅遊計畫概覽圖</h2>
+    <h2>📋 快速查檢表</h2>
+    <div style="display: grid; gap: 8px;">
+        <label><input type="checkbox"> 補胎五件組 & 電動打氣機</label>
+        <label><input type="checkbox"> 防風防水外套 & 脖圍手套</label>
+        <label><input type="checkbox"> 行動電源 & 離線地圖下載</label>
+        <label><input type="checkbox"> 兩件式雨衣</label>
+    </div>
+</div>
+
+<div class="section">
+    <h2>🖼️ 視覺計畫概覽</h2>
     <img src="https://github.com/user-attachments/assets/a6503acc-6710-47db-b3d0-bf0c20b18883" alt="2026南橫計畫圖" class="trip-image">
 </div>
 
 <footer>
-    <p>© 2026 南橫熱血一日遊 | 祝您旅途平安！</p>
+    <p>© 2026 南橫熱血一日遊 | 祝您旅途平安順利！</p>
 </footer>
 
 </body>
